--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python Debugger: queue reader",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/queue_filter.py",
+            "program": "${workspaceFolder}/queue_harvesting.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env.production",
             "python": "${workspaceFolder}/venv/bin/python" 
