--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ FORWARDING_MEDIA = "True"
 REMOVE_AFTER_PROCESSED = "True"
 
 # Queue parameters
-QUEUE_NAME="data-filtering"
+QUEUE_NAME="data-harvesting"
 TARGET_QUEUE_NAME=""
 QUEUE_EXCHANGE=""
 QUEUE_HOST="rabbitmq-broker.xxx.xx:5672"
