--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -23,8 +23,21 @@ spec:
           env:
             - name: MODEL_NAME
               value: "yolov8n.pt"
-            - name: CONDITION
-              value:  "1 persons detected"
+            - name: MODEL_NAME_2
+              value: "helmet_dectector_1k_16b_150e.pt"
+            - name: MODEL_ALLOWED_CLASSES
+              value: "0"
+            - name: MODEL_2_ALLOWED_CLASSES
+              value: "0,1,2"
+
+            - name: DATASET_FORMAT
+              value: "base"
+            - name: DATASET_VERSION
+              value: "1"
+            - name: DATASET_UPLOAD
+              value: "True"
+            - name: MODEL_NAME
+              value: "yolov8n.pt"
 
             - name: QUEUE_NAME
               value: "data-harvesting" # This is the topic of kafka we will read messages from.
@@ -39,9 +52,28 @@ spec:
             - name: STORAGE_URI
               value: "http://vault-lb.kerberos-vault/api"
             - name: STORAGE_ACCESS_KEY
-              value: "52gyELgxutOXUWhF"
+              value: "YOUR_KEY"
             - name: STORAGE_SECRET_KEY
-              value: "k8DrcB@hQ5XfxDENzDKcnkxBHx"
+              value: "YOUR_SECRET_KEY"
+
+            - name: INTEGRATION_NAME
+              value: "s3"
+
+            - name: RBF_API_KEY
+              value: "YOUR KEY"
+            - name: RBF_WORKSPACE
+              value: "YOUR_WS"
+            - name: RBF_PROJECT
+              value: "YOUR_PROJ"
+
+            - name: S3_ENDPOINT
+              value: "YOUR_ENDPOINT"
+            - name: S3_ACCESS_KEY
+              value: "YOUR_KEY"
+            - name: S3_SECRET_KEY
+              value: "YOUR_SECRET_KEY"
+            - name: S3_BUCKET
+              value: "YOUR_BUCKET"
 
             - name: LOGGING
               value: "True"
@@ -60,11 +92,17 @@ spec:
             - name: CLASSIFICATION_FPS
               value: "3"
             - name: CLASSIFICATION_THRESHOLD
-              value: "0.3"
+              value: "0.25"
             - name: MAX_NUMBER_OF_PREDICTIONS
               value: "100"
+            - name: FRAMES_SKIP_AFTER_DETECT
+              value: "50"
             - name: ALLOWED_CLASSIFICATIONS
               value: "0, 1, 2, 3, 5, 7, 14, 15, 16, 24, 26, 28"
+            - name: MIN_DETECTIONS
+              value: "1"
+            - name: IOU
+              value: "0.85"
 
             - name: REMOVE_AFTER_PROCESSED
               value: "True"
