--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ MODEL_NAME_2="your_second_model.pt"
 MODEL_ALLOWED_CLASSES="0"
 MODEL_2_ALLOWED_CLASSES="0"
 
-#Dataset parameters
+# Dataset parameters
 DATASET_FORMAT="base"
 DATASET_VERSION="1"
 DATASET_UPLOAD="True"
@@ -27,7 +27,7 @@ STORAGE_URI="https://vault.xxx.xx/api"
 STORAGE_ACCESS_KEY="xxxx"
 STORAGE_SECRET_KEY="xxx"
 
-#Integration parameters
+# Integration parameters
 INTEGRATION_NAME="roboflow"
 
 # Roboflow parameters
@@ -35,18 +35,18 @@ RBF_API_KEY="xxx"
 RBF_WORKSPACE="xxx"
 RBF_PROJECT="xxx"
 
-#S3 parameters
+# S3 parameters
 S3_ENDPOINT="xxx"
 S3_ACCESS_KEY="xxx"
 S3_SECRET_KEY="xxx"
 S3_BUCKET="xxx"
 
 # Feature parameters
+PROJECT_NAME="Your_project"
 PLOT="True"
 MEDIA_SAVEPATH="data/video/video_in.mp4"
 SAVE_VIDEO="True"
 OUTPUT_MEDIA_SAVEPATH="data/video/video_out.mp4"
-REMOVE_AFTER_PROCESSED="False"
 
 TIME_VERBOSE="True"
 LOGGING="True"
