update k8s file with new variables + remove files after being uploaded

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-# Environment variables
+# Project parameters
+PROJECT_NAME="Your_project"
+
 # Dataset parameters
-DATASET_FORMAT="base"
+DATASET_FORMAT="flat"
 DATASET_VERSION="1"
 DATASET_UPLOAD="True"
 
@@ -22,7 +24,7 @@ STORAGE_ACCESS_KEY="xxxx"
 STORAGE_SECRET_KEY="xxx"
 
 # Integration parameters
-INTEGRATION_NAME="roboflow"
+INTEGRATION_NAME="s3"
 
 # Roboflow parameters
 RBF_API_KEY="xxx"
@@ -35,9 +37,7 @@ S3_ACCESS_KEY="xxx"
 S3_SECRET_KEY="xxx"
 S3_BUCKET="xxx"
 
-# Feature parameters
-PROJECT_NAME="Your_project"
-
+# Logging parameters
 TIME_VERBOSE="True"
 LOGGING="True"
 
