--- a/projects/person/person_config.yaml
+++ b/projects/person/person_config.yaml
@@ -5,4 +5,4 @@ allowed_classes:
 
 number_of_persons: 1
 
-temp: "./data/video.mp4" # System will temporarily download video from Integration platform (s3, roboflow) to this path to process
+temp: "/tmp/video.mp4" # System will temporarily download video from Integration platform (s3, roboflow) to this path to process
