--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -20,6 +20,7 @@ spec:
           resources:
             limits:
               nvidia.com/gpu: 1 # requesting a single GPU
+              nvidia.com/gpumem: 512 # Each vGPU contains 512m device memory
               cpu: 2
               memory: 2Gi
           env:
